--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <br />
         <br />
 
-        <button type="button" id="output" py-click="generate_card">Generate Message</button>
+        <button type="button" id="output" py-click="generate_card">Generate Message:</button>
         <br />
         <br />
 
